// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swiper > :props > :animation fade 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-fade"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :autoplay 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :defaultCurrent 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :direction 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(0, -0%, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :duration 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :height 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :interval 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :loop 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :navigation 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--outside t-swiper--large"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :theme 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :type 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-card"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > additional function > navigation: VNode 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <div>
      123
    </div>
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper > additional function > no valid panel 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
